--- a/pages/adminDashboard.html
+++ b/pages/adminDashboard.html
@@ -6,7 +6,7 @@
     <title>Admin Dashboard</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <link rel="stylesheet" href="/css/adminDashboard.css">
+    <link rel="stylesheet" href="../css/adminDashboard.css">
     <style>
         /* Sidebar styles for responsiveness */
 .sidebar {
@@ -69,26 +69,26 @@
     <!-- Sidebar -->
     <div class="sidebar">
         <div class="profile-section text-center">
-            <img src="/img/profileimg.jpg" alt="Profile Picture">
+            <img src="../imgs/profileimg.jpg" alt="Profile Picture">
             <h5>Admin</h5>
             <p>Administrator</p>
         </div>
         <ul class="nav flex-column">
             
             <li class="nav-item">
-                <a class="nav-link active" href="/pages/adminDashboard.html">Dashboard</a>
+                <a class="nav-link active" href="../pages/adminDashboard.html">Dashboard</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/pages/staff.html">Staff</a>
+                <a class="nav-link" href="../pages/staff.html">Staff</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/pages/vehicle.html">Vehicles</a>
+                <a class="nav-link" href="../pages/vehicle.html">Vehicles</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/pages/equipment.html">Equipment</a>
+                <a class="nav-link" href="../pages/equipment.html">Equipment</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/pages/index.html">Logout</a>
+                <a class="nav-link" href="../pages/index.html">Logout</a>
             </li>
         </ul>
     </div>
@@ -138,7 +138,7 @@
     </div>
 
     <!-- JS Script -->
-    <script src="/controller/adminDashboard.js"></script>
+    <script src="../controller/adminDashboard.js"></script>
     <script>
         // JavaScript for Hamburger Button
 const hamburgerBtn = document.getElementById("hamburgerBtn");
