--- a/pages/crop.html
+++ b/pages/crop.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crop Management</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/crop.css">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="../css/crop.css">
+    <link rel="stylesheet" href="../css/main.css">
     <style>
         body{
-            background-image: url('/img/paddy.jpg');
+            background-image: url('../imgs/paddy.jpg');
         }
         
     </style>
@@ -21,7 +21,7 @@
         <!-- Sidebar -->
         <div class="col-md-3 col-lg-2 bg-light sidebar">
             <div class="profile-section text-center mt-4">
-                <img src="/img/profileimg.jpg" alt="Profile Picture" class="rounded-circle" width="60">
+                <img src="../imgs/profileimg.jpg" alt="Profile Picture" class="rounded-circle" width="60">
                 <h5>Sachini</h5>
                 <p>Manager</p>
             </div>
@@ -30,19 +30,19 @@
                     <a class="nav-link" href="/pages/">Dashboard</a>
                 </li> -->
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/field.html">Field Data</a>
+                    <a class="nav-link" href="../pages/field.html">Field Data</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/pages/crop.html">Crops</a>
+                    <a class="nav-link" href="../pages/crop.html">Crops</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages//equipment.html">Equipment</a>
+                    <a class="nav-link" href="../pages//equipment.html">Equipment</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/vehicle.html">Vehicle</a>
+                    <a class="nav-link" href="../pages/vehicle.html">Vehicle</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/staff.html">Staff</a>
+                    <a class="nav-link" href="../pages/staff.html">Staff</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Logout</a>
