--- a/pages/index.html
+++ b/pages/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In - Green Shadow (Pvt) Ltd</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/signin.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="../css/signin.css">
 </head>
 <body>
 
@@ -29,9 +30,10 @@
             <label for="role" class="form-label">Role</label>
                 <select id="role" class="form-control" required>
                     <option value="">Select your role</option>
-                    <option value="admin">Admin</option>
-                    <option value="user">Manager</option>
-                    <option value="guest">Scientist</option>
+                    <option value="ADMINISTRATIVE">ADMINISTRATIVE</option>
+                    <option value="MANAGER">MANAGER</option>
+                    <option value="SCIENTIST">SCIENTIST</option>
+                    <option value="OTHER">OTHER</option>
                 </select> <br/>
 
             <!-- <div class="form-check mb-3">
@@ -44,7 +46,7 @@
             <button type="submit" class="btn btn-custom w-100" id="sign-in-btn">Sign In</button>
 
             <div class="already-account">
-                <p>Already have an account? <a href="/pages/signup.html">Register</a></p>
+                <p>Already have an account? <a href="../pages/signup.html">Register</a></p>
             </div>
         </form>
     </div>
@@ -52,17 +54,18 @@
     <div class="left-section col-lg-6">
         <div class="text-end mb-3">
             <br/>
-            <button class="btn-move"onclick="window.location.href='/pages/index.html'">Sign In</button>
-            <button class="btn-move" onclick="window.location.href='/pages/signup.html'"> Register</button>
+            <button class="btn-move"onclick="window.location.href='../pages/index.html'">Sign In</button>
+            <button class="btn-move" onclick="window.location.href='../pages/signup.html'"> Register</button>
         </div> 
 
  <!--<p id="tagline">Shaping Tomorrow with Innovation and Integrity</p>-->
-        <img src="/imgs/i2-removebg-preview.png" alt="Hand Leaf Icon" id= "signin-img">
+        <img src="../imgs/i2-removebg-preview.png" alt="Hand Leaf Icon" id= "signin-img">
 
         <p id="description">Our service blends innovation and ease for unmatched convenience and satisfaction.</p>
     </div>
 </div>
 
+<script src="../controller/signIn.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 </body>
