--- a/pages/managerDashboard.html
+++ b/pages/managerDashboard.html
@@ -9,7 +9,7 @@
     <!-- Include Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/css/managerDashboard.css">
+    <link rel="stylesheet" href="../css/managerDashboard.css">
      
 </head>
 <body>
@@ -17,20 +17,20 @@
         <!-- Sidebar -->
         <div class="sidebar">
             <div class="profile-section">
-                <img src="/img/mng.webp" alt="Profile">
+                <img src="../imgs/mng.webp" alt="Profile">
                 <h5>Manager</h5>
-                <p>Manager Dashboard</p>
+                <p class="manager-dashboard-title">Manager Dashboard</p>
             </div>
             <ul class="nav flex-column">
-                <li class="nav-item"><a href="/pages/managerDashboard.html" class="nav-link active">Dashboard</a></li>
-                <li class="nav-item"><a href="/pages/crop.html" class="nav-link">Crops</a></li>
-                <li class="nav-item"><a href="/pages/field.html" class="nav-link">Fields</a></li>
-                <li class="nav-item"><a href="/pages/" class="nav-link">Users</a></li>
-                <li class="nav-item"><a href="/pages/managerDashboard.html" class="nav-link">Monitoring Logs</a></li>
-                <li class="nav-item"><a href="/pages/staff.html" class="nav-link">Staff</a></li>
-                <li class="nav-item"><a href="/pages/vehicle.html" class="nav-link">Vehicles</a></li>
-                <li class="nav-item"><a href="/pages/equipment.html" class="nav-link">Equipment</a></li>
-                <li class="nav-item"><a href="/pages/index.html" class="nav-link">Logout</a></li>
+                <li class="nav-item"><a href="../pages/managerDashboard.html" class="nav-link active">Dashboard</a></li>
+                <li class="nav-item"><a href="../pages/crop.html" class="nav-link">Crops</a></li>
+                <li class="nav-item"><a href="../pages/field.html" class="nav-link">Fields</a></li>
+                <li class="nav-item"><a href="../pages/" class="nav-link">Users</a></li>
+                <li class="nav-item"><a href="../pages/managerDashboard.html" class="nav-link">Monitoring Logs</a></li>
+                <li class="nav-item"><a href="../pages/staff.html" class="nav-link">Staff</a></li>
+                <li class="nav-item"><a href="../pages/vehicle.html" class="nav-link">Vehicles</a></li>
+                <li class="nav-item"><a href="../pages/equipment.html" class="nav-link">Equipment</a></li>
+                <li class="nav-item"><a href="../pages/index.html" class="nav-link">Logout</a></li>
             </ul>
         </div>
 
@@ -77,6 +77,6 @@
     </div>
 
     <!-- Include JavaScript -->
-    <script src="/controller/managerDashboard.js"></script>
+    <script src="../controller/managerDashboard.js"></script>
 </body>
 </html>
