--- a/pages/scientistDashboard.html
+++ b/pages/scientistDashboard.html
@@ -8,24 +8,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Include Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <link rel="stylesheet" href="/css/scientistDashboard.css"/>
+    <link rel="stylesheet" href="../css/scientistDashboard.css"/>
 </head>
 <body>
     <div class="d-flex">
         <!-- Sidebar -->
         <div class="sidebar">
             <div class="profile-section">
-                <img src="/img//sci.webp" alt="Profile">
+                <img src="../imgs/sci.webp" alt="Profile">
                 <h5>Scientist</h5>
                 <p>Scientist Dashboard</p>
             </div>
             <ul class="nav flex-column">
-                <li class="nav-item"><a href="/pages/scientistDashboard.html" class="nav-link active">Dashboard</a></li>
-                <li class="nav-item"><a href="/pages/crop.html" class="nav-link">Crops</a></li>
-                <li class="nav-item"><a href="/pages/field.html" class="nav-link">Fields</a></li>
-                <li class="nav-item"><a href="/pages/" class="nav-link">Users</a></li>
-                <li class="nav-item"><a href="/pages/monitoringLog.html" class="nav-link">Monitoring Logs</a></li>
-                <li class="nav-item"><a href="/pages/index.html" class="nav-link">Logout</a></li>
+                <li class="nav-item"><a href="../pages/scientistDashboard.html" class="nav-link active">Dashboard</a></li>
+                <li class="nav-item"><a href="../pages/crop.html" class="nav-link">Crops</a></li>
+                <li class="nav-item"><a href="../pages/field.html" class="nav-link">Fields</a></li>
+                <li class="nav-item"><a href="../pages/" class="nav-link">Users</a></li>
+                <li class="nav-item"><a href="../pages/monitoringLog.html" class="nav-link">Monitoring Logs</a></li>
+                <li class="nav-item"><a href="../pages/index.html" class="nav-link">Logout</a></li>
             </ul>
         </div>
 
@@ -53,6 +53,6 @@
     </div>
 
     <!-- Include JavaScript -->
-    <script src="/controller/scientistDashboard.js"></script>
+    <script src="../controller/scientistDashboard.js"></script>
 </body>
 </html>
