--- a/pages/signup.html
+++ b/pages/signup.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/signup.css" rel="stylesheet"/>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link href="../css/signup.css" rel="stylesheet"/>
 </head>
 <body>
 <div class="container">
@@ -14,14 +15,14 @@
         <h1>Welcome !</h1>
         <h2>Green Shadow (Pvt) Ltd</h2>
 
-        <img src="/img/signup.avif">
+        <img src="../imgs/signup.avif">
     </div>
 
     <!-- Right Section -->
     <div class="right-section">
         <div class="form-container">
             <h2>Create Account</h2>
-            <form>
+            <form id="signupForm">
                 <label for="email" class="form-label">Email</label>
                 <input type="email" id="email" class="form-control" placeholder="Enter your email" required>
 
@@ -32,19 +33,23 @@
                 <label for="role" class="form-label">Role</label>
                 <select id="role" class="form-control" required>
                     <option value="">Select your role</option>
-                    <option value="admin">Admin</option>
-                    <option value="user">Manager</option>
-                    <option value="guest">Scientist</option>
+                    <option value="ADMINISTRATIVE">ADMINISTRATIVE</option>
+                    <option value="MANAGER">MANAGER</option>
+                    <option value="SCIENTIST">SCIENTIST</option>
+                    <option value="OTHER">OTHER</option>
                 </select>
 
                 <button type="submit" class="btn btn-custom w-100">Create account</button>
             </form>
 
             <div class="already-account">
-                <p>Already have an account? <a href="/pages/index.html">Log in</a></p>
+                <p>Already have an account? <a href="../pages/index.html">Log in</a></p>
             </div>
         </div>
     </div>
 </div>
+<script src="../controller/signup.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
