--- a/pages/vehicle.html
+++ b/pages/vehicle.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vehicle Management</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
 
@@ -16,7 +16,7 @@
         
 
             <div class="profile-section text-center mt-4">
-                <img src="/img/profileimg.jpg" alt="Profile Picture" class="rounded-circle" width="60">
+                <img src="../imgs/profileimg.jpg" alt="Profile Picture" class="rounded-circle" width="60">
                 <h5>Sachini</h5>
                 <p>Manager</p>
             </div>
@@ -25,19 +25,19 @@
                     <a class="nav-link" href="#">Dashboard</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/field.html">Field Data</a>
+                    <a class="nav-link" href="../pages/field.html">Field Data</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/crop.html">Crops</a>
+                    <a class="nav-link" href="../pages/crop.html">Crops</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/equipment.html">Equipment</a>
+                    <a class="nav-link" href="../pages/equipment.html">Equipment</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/pages/vehicle.html">Vehicles</a>
+                    <a class="nav-link" href="../pages/vehicle.html">Vehicles</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/staff.html">Staff</a>
+                    <a class="nav-link" href="../pages/staff.html">Staff</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Logout</a>
@@ -137,6 +137,6 @@
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
-<script src="/controller/vehicle.js"></script>
+<script src="../controller/vehicle.js"></script>
 </body>
 </html>
