--- a/pages/crop.html
+++ b/pages/crop.html
@@ -22,7 +22,7 @@
         <div class="col-md-3 col-lg-2 bg-light sidebar">
             <div class="profile-section text-center mt-4">
                 <img src="../imgs/profileimg.jpg" alt="Profile Picture" class="rounded-circle" width="60">
-                <h5>Sachini</h5>
+                <h5>Imakshi</h5>
                 <p>Manager</p>
             </div>
             <ul class="nav flex-column mt-4">
@@ -124,10 +124,16 @@
                             <input type="text" class="form-control" id="fieldDetails" placeholder="Enter Field Details">
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-row">
+                    <div class="form-group col-md-6">
                         <label for="cropImage">Image</label>
                         <input type="file" class="form-control-file" id="cropImage">
                     </div>
+                    <div class="form-group col-md-6">
+                        <label for="logCode">Log Code</label>
+                        <input type="text" class="form-control" id="logCode" placeholder="Enter Log Code">
+                    </div>
+                </div>
                 </form>
             </div>
             <div class="modal-footer">
@@ -144,6 +150,6 @@
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
-<script src="/controller/crop.js"></script>
+<script src="../js/crop.js"></script>
 </body>
 </html>
