--- a/pages/field.html
+++ b/pages/field.html
@@ -17,7 +17,7 @@
         <div class="col-md-3 col-lg-2 bg-light sidebar">
             <div class="profile-section text-center mt-4">
                 <img src="../imgs/profileimg.jpg" alt="Profile Picture" class="rounded-circle" width="60">
-                <h5>Sachini</h5>
+                <h5>Imakshi</h5>
                 <p>Manager</p>
             </div>
             <ul class="nav flex-column mt-4">
@@ -139,6 +139,6 @@
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
-<script src="../controller/field.js"></script>
+<script src="../js/field.js"></script>
 </body>
 </html>
