--- a/pages/index.html
+++ b/pages/index.html
@@ -65,7 +65,7 @@
     </div>
 </div>
 
-<script src="../controller/signIn.js"></script>
+<script src="../js/signIn.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 </body>
