--- a/pages/monitoringLog.html
+++ b/pages/monitoringLog.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monitoring Log Management</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
 <div class="container-fluid">
@@ -13,8 +13,8 @@
         <!-- Sidebar -->
         <div class="col-md-3 col-lg-2 bg-light sidebar">
             <div class="profile-section text-center mt-4">
-                <img src="../imgs/profileimg.jpg" alt="Profile Picture" class="rounded-circle" width="60">
-                <h5>Sachini</h5>
+                <img src="/assets/Images/profileimg.jpg" alt="Profile Picture" class="rounded-circle" width="60">
+                <h5>Imakshi</h5>
                 <p>Manager</p>
             </div>
             <ul class="nav flex-column mt-4">
@@ -22,19 +22,19 @@
                     <a class="nav-link" href="#">Dashboard</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../pages/field.html">Field</a>
+                    <a class="nav-link" href="/pages/field.html">Field</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../pages/crop.html">Crops</a>
+                    <a class="nav-link" href="/pages/crop.html">Crops</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../pages/equipment.html">Equipment</a>
+                    <a class="nav-link" href="/pages/equipment.html">Equipment</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../pages/vehicle.html">Vehicle</a>
+                    <a class="nav-link" href="/pages/vehicle.html">Vehicle</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="../pages/monitoringLog.html">Monitoring Logs</a>
+                    <a class="nav-link" href="/pages/monitoringLog.html">Monitoring Logs</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Logout</a>
@@ -120,7 +120,7 @@
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
-<script src="../controller/monitoringLog.js"></script>
+<script src="/controller/monitoringLog.js"></script>
 </body>
 </html>
  
