--- a/pages/signup.html
+++ b/pages/signup.html
@@ -15,7 +15,7 @@
         <h1>Welcome !</h1>
         <h2>Green Shadow (Pvt) Ltd</h2>
 
-        <img src="../imgs/signup.avif">
+        <img src="../imgs/undraw_add_user_re_5oib (1).svg">
     </div>
 
     <!-- Right Section -->
@@ -48,7 +48,7 @@
         </div>
     </div>
 </div>
-<script src="../controller/signup.js"></script>
+<script src="../js/signUp.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 </body>
