--- a/pages/vehicle.html
+++ b/pages/vehicle.html
@@ -17,7 +17,7 @@
 
             <div class="profile-section text-center mt-4">
                 <img src="../imgs/profileimg.jpg" alt="Profile Picture" class="rounded-circle" width="60">
-                <h5>Sachini</h5>
+                <h5>Imakshi</h5>
                 <p>Manager</p>
             </div>
             <ul class="nav flex-column mt-4">
@@ -128,7 +128,7 @@
                 <button type="button" class="btn btn-primary" onclick="saveVehicle()">Save</button>
                 <button type="button" class="btn btn-info" onclick="updateVehicle()">Update</button>
                 <button type="button" class="btn btn-warning" onclick="getAllVehicles()">Get All</button>
-                <button type="button" class="btn btn-danger" onclick="deleteVehicle()">Delete</button>
+                <button type="button" class="btn btn-danger" onclick="deleteVehicle(this)">Delete</button>
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
         </div>
@@ -137,6 +137,6 @@
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
-<script src="../controller/vehicle.js"></script>
+<script src="../js/vehicle.js"></script>
 </body>
 </html>
