--- a/pages/adminDashboard.html
+++ b/pages/adminDashboard.html
@@ -7,6 +7,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="../css/adminDashboard.css">
+    <link rel="stylesheet" href="../css/sidebar.css">
     <style>
         /* Sidebar styles for responsiveness */
 .sidebar {
@@ -67,35 +68,40 @@
 </head>
 <body>
     <!-- Sidebar -->
-    <div class="sidebar">
-        <div class="profile-section text-center">
-            <img src="../imgs/profileimg.jpg" alt="Profile Picture">
-            <h5>Admin</h5>
-            <p>Administrator</p>
+    <div class="sidebar" id="sidebar">
+        <div>
+            <div class="sidebar-header">
+                <div class="logo">
+                    <img src="../imgs/img.png" alt="Green">
+                </div>
+            </div>
+
+            <div class="sidebar-links">
+                <a href="../pages/adminDashboard.html" onclick="loadContent('dashboard')">
+                    <i class="fas fa-tachometer-alt"></i><span>Dashboard</span>
+                </a>
+                <a href="../pages/staff.html" onclick="loadContent('staff')">
+                    <i class="fas fa-users"></i><span>Staff</span>
+                </a>
+                <a href="../pages/vehicle.html" onclick="loadContent('vehicle')">
+                    <i class="fas fa-tractor"></i><span>Vehicles</span>
+                </a>
+                <a href="../pages/equipment.html" onclick="loadContent('equipment')">
+                    <i class="fas fa-tools"></i><span>Equipment</span>
+                </a>
+            </div>
         </div>
-        <ul class="nav flex-column">
-            
-            <li class="nav-item">
-                <a class="nav-link active" href="../pages/adminDashboard.html">Dashboard</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../pages/staff.html">Staff</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../pages/vehicle.html">Vehicles</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../pages/equipment.html">Equipment</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../pages/index.html">Logout</a>
-            </li>
-        </ul>
+        <div class="sidebar-footer">
+            <a href="#sign-out">
+                <i class="fas fa-sign-out-alt"></i><span>Sign Out</span>
+            </a>
+        </div>
     </div>
+
     <!-- Hamburger button -->
-        <button class="hamburger-btn" id="hamburgerBtn">
-            ☰
-        </button>
+    <button class="hamburger-btn" id="hamburgerBtn">
+        ☰
+    </button>
 
     <!-- Main content -->
     <div class="main-container">
@@ -125,7 +131,7 @@
         
             <!-- Right Column: Chart -->
             <div class="right-column">
-                <h3>Staff Designation Breakdown</h>
+                <h3>Staff Designation Breakdown</h3>
                 <canvas id="designationChart" width="200" height="150"></canvas>
                 <div class="chart-legend">
                     <span><div style="background-color: #1fb469;"></div> Manager</span>
@@ -139,16 +145,18 @@
 
     <!-- JS Script -->
     <script src="../controller/adminDashboard.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="../js/sidebarController.js"></script>
     <script>
         // JavaScript for Hamburger Button
-const hamburgerBtn = document.getElementById("hamburgerBtn");
-const sidebar = document.getElementById("sidebar");
+        const hamburgerBtn = document.getElementById("hamburgerBtn");
+        const sidebar = document.getElementById("sidebar");
 
-// Toggle sidebar visibility on button click
-hamburgerBtn.addEventListener("click", () => {
-    sidebar.classList.toggle("active");
-});
-
+        // Toggle sidebar visibility on button click
+        hamburgerBtn.addEventListener("click", () => {
+            sidebar.classList.toggle("active");
+        });
     </script>
 </body>
 </html>
