--- a/pages/equipment.html
+++ b/pages/equipment.html
@@ -16,7 +16,7 @@
         <!-- Sidebar -->
         <div class="col-md-3 col-lg-2 bg-light sidebar">
             <div class="profile-section text-center mt-4">
-                <img src="../imgs/profileimg.jpg" alt="Profile Picture" class="rounded-circle" width="60">
+                <img src="../imgs/profilepic.png" alt="Profile Picture" class="rounded-circle" width="60">
                 <h5>Imakshi</h5>
                 <p>Manager</p>
             </div>
@@ -30,9 +30,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="../pages/crop.html">Crops</a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="../pages/equipment.html">Equipment</a>
-                </li>
+                
                 <li class="nav-item">
                     <a class="nav-link" href="../pages/vehicle.html">Vehicle</a>
                 </li>
@@ -40,14 +38,14 @@
                     <a class="nav-link" href="../pages/staff.html">Staff</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Logout</a>
+                    <a class="nav-link" href="../pages/index.html">Logout</a>
                 </li>
             </ul>
         </div>
 
         <!-- Main Content -->
         <div class="col-md-9 col-lg-10 main-content">
-            <h1 class="my-4 text-center">Equipment Management</h1>
+            <h1 class="my-4 text-center" style="font-weight: bold;">Equipment Management</h1>
 
             <!-- Search Bar and Add Button -->
             <div class="d-flex justify-content-between align-items-center mb-3">
@@ -67,6 +65,7 @@
                     <th>Equipment Name</th>
                     <th>Status</th>
                     <th>Type</th>
+                    <th>Actions</th>
                 </tr>
                 </thead>
                 <tbody   class="tBody">
