--- a/pages/field.html
+++ b/pages/field.html
@@ -16,16 +16,13 @@
         <!-- Sidebar -->
         <div class="col-md-3 col-lg-2 bg-light sidebar">
             <div class="profile-section text-center mt-4">
-                <img src="../imgs/profileimg.jpg" alt="Profile Picture" class="rounded-circle" width="60">
+                <img src="../imgs/profilepic.png" alt="Profile Picture" class="rounded-circle" width="60">
                 <h5>Imakshi</h5>
                 <p>Manager</p>
             </div>
             <ul class="nav flex-column mt-4">
                 <li class="nav-item">
                     <a class="nav-link" href="#">Dashboard</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="../pages/field.html">Field Data</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../pages/crop.html">Crops</a>
@@ -40,7 +37,7 @@
                     <a class="nav-link" href="../pages/staff.html">Staff</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Logout</a>
+                    <a class="nav-link" href="../pages/index.html">Logout</a>
                 </li>
             </ul>
         </div>
@@ -102,8 +99,8 @@
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <label for="extentSize">Extent Size</label>
-                            <input type="number" step="0.01" class="form-control" id="extentSize" placeholder="Enter Extent Size">
+                            <label for="fieldSize">Extent Size</label>
+                            <input type="number" step="0.01" class="form-control" id="fieldSize" placeholder="Enter Extent Size">
                         </div>
                         <div class="form-group col-md-6">
                             <label for="fieldLocation">Field Location</label>
@@ -113,11 +110,11 @@
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <label for="img1">Image 1</label>
-                            <input type="file" class="form-control-file" id="img1">
+                            <input type="file" class="form-control-file" id="fieldImage1">
                         </div>
                         <div class="form-group col-md-6">
                             <label for="img2">Image 2</label>
-                            <input type="file" class="form-control-file" id="img2">
+                            <input type="file" class="form-control-file" id="fieldImage2">
                         </div>
                     </div>
                     <div class="form-group">
