--- a/pages/scientistDashboard.html
+++ b/pages/scientistDashboard.html
@@ -8,46 +8,74 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Include Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="../css/scientistDashboard.css"/>
 </head>
 <body>
     <div class="d-flex">
         <!-- Sidebar -->
         <div class="sidebar">
-            <div class="profile-section">
-                <img src="../imgs/sci.webp" alt="Profile">
-                <h5>Scientist</h5>
-                <p>Scientist Dashboard</p>
+            <div class="profile-section text-center">
+                <img src="../imgs/sci.webp" alt="Profile" class="img-fluid rounded-circle shadow-sm mb-3">
+                <h5 class="fw-bold text-success">Scientist</h5>
+                <p class="text-muted">Scientist Dashboard</p>
             </div>
-            <ul class="nav flex-column">
+            <ul class="nav flex-column mt-4">
                 <li class="nav-item"><a href="../pages/scientistDashboard.html" class="nav-link active">Dashboard</a></li>
                 <li class="nav-item"><a href="../pages/crop.html" class="nav-link">Crops</a></li>
                 <li class="nav-item"><a href="../pages/field.html" class="nav-link">Fields</a></li>
-                <li class="nav-item"><a href="../pages/" class="nav-link">Users</a></li>
+                <li class="nav-item"><a href="../pages/equipment.html" class="nav-link">Equipment</a></li>
                 <li class="nav-item"><a href="../pages/monitoringLog.html" class="nav-link">Monitoring Logs</a></li>
                 <li class="nav-item"><a href="../pages/index.html" class="nav-link">Logout</a></li>
             </ul>
         </div>
 
         <!-- Main Content -->
-        <div class="main-container">
-            <h1 class="mb-4">Scientist Dashboard</h1>
+        <div class="main-container flex-grow-1 p-4 bg-light">
+            <h1 class="mb-4 text-success">Scientist Dashboard</h1>
+
+            <!-- Stats Cards -->
+            <div class="row g-4">
+                <div class="col-md-4">
+                    <div class="card shadow-sm text-white bg-success text-center">
+                        <div class="card-body">
+                            <h5 class="card-title">Crop Categories</h5>
+                            <p class="card-text">15 Active Categories</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card shadow-sm text-white bg-info text-center">
+                        <div class="card-body">
+                            <h5 class="card-title">Fields Monitored</h5>
+                            <p class="card-text">120 Fields</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card shadow-sm text-white bg-warning text-center">
+                        <div class="card-body">
+                            <h5 class="card-title">Monitoring Logs</h5>
+                            <p class="card-text">345 Logs Added</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <!-- Graphs Row -->
-            <div class="row mt-4">
-                <div class="col-md-6" id="pieChart">
-                    <div class="chart-container">
+            <div class="row mt-5 g-4">
+                <div class="col-md-6">
+                    <div class="chart-container shadow-sm p-4 bg-white rounded">
                         <h5>Crop Categories</h5>
                         <canvas id="cropPieChart"></canvas>
                     </div>
                 </div>
-                <div class="col-md-6" id="lineChart">
-                    <div class="chart-container">
+                <div class="col-md-6">
+                    <div class="chart-container shadow-sm p-4 bg-white rounded">
                         <h5>Crop Growth Over Time</h5>
                         <canvas id="cropLineChart"></canvas>
                     </div>
                 </div>
-                
             </div>
         </div>
     </div>
