--- a/pages/vehicle.html
+++ b/pages/vehicle.html
@@ -16,7 +16,7 @@
         
 
             <div class="profile-section text-center mt-4">
-                <img src="../imgs/profileimg.jpg" alt="Profile Picture" class="rounded-circle" width="60">
+                <img src="../imgs/profilepic.png" alt="Profile Picture" class="rounded-circle" width="60">
                 <h5>Imakshi</h5>
                 <p>Manager</p>
             </div>
@@ -33,28 +33,28 @@
                 <li class="nav-item">
                     <a class="nav-link" href="../pages/equipment.html">Equipment</a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="../pages/vehicle.html">Vehicles</a>
-                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../pages/staff.html">Staff</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Logout</a>
+                    <a class="nav-link" href="../pages/index.html">Logout</a>
                 </li>
             </ul>
         </div>
 
         <!-- Main Content -->
         <div class="col-md-9 col-lg-10 main-content">
-            <h1 class="my-4 text-center">Vehicle Management</h1>
+            <h1 class="my-4 text-center" style="font-weight: bold;">Vehicle Management</h1>
             <!-- <button class="back-button" onclick="goBack()">
                 <img src="https://img.icons8.com/ios-filled/50/000000/left.png" alt="Back Icon"> 
             </button> -->
 
             <!-- Search Bar and Add Button -->
             <div class="d-flex justify-content-between align-items-center mb-3">
-                <input type="text" class="form-control w-50" placeholder="Search Vehicle">
+                <div class="search-container">
+                    <input type="text" id="searchInput" placeholder="Search by vehilce name...">
+                    <button onclick="search()">Search</button>
+                </div>
                 <button class="btn btn-success" data-toggle="modal" data-target="#addVehicleModal">Add Vehicle</button>
             </div>
 
